2008-05-03  Rob Buis  <buis@kde.org>

        Reviewed by Sam.

        https://bugs.webkit.org/show_bug.cgi?id=18652
        onchange events don't seem to fire for input[type=range] controls.

        Fire changeEvent when clicking the slider outside the current
        thumb position.

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::setValueForPosition):

2008-05-03  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Remove unused enums from JSDOMWindowBase.

        * bindings/js/JSDOMWindowBase.h:
        (WebCore::JSDOMWindowBase::):

2008-05-03  Sam Weinig  <sam@webkit.org>

        Real build fix.

        * WebCore.xcodeproj/project.pbxproj:

2008-05-03  Sam Weinig  <sam@webkit.org>

        Build fix.

        * bindings/js/kjs_events.cpp:
        (WebCore::JSAbstractEventListener::handleEvent):

2008-05-03  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Geoffrey Garen.

        Rename JSDOMWindowWrapper to JSDOMWindowShell.

2008-05-01  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        https://bugs.webkit.org/show_bug.cgi?id=18568
        background: currentColor fails

        Implement currentColor from CSS3 color module.

        Tests: fast/css/background-currentcolor.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        (WebCore::CSSParser::parseBackgroundColor):
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::getColorFromPrimitiveValue):
        * css/CSSValueKeywords.in:
        * css/SVGCSSValueKeywords.in:

2008-05-02  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mark.

        Turns out calling locationInWindow on keyboard events will not throw an exception,
        but the point returned is completely bogus, so remove coordinates from the keyboard event struct.
        
        * bridge/npapi.h:
        (_NPCocoaEvent::):

2008-05-02  Benjamin Otte  <otte@gnome.org>

        Reviewed by Alp Toker.
